--- a/style.css
+++ b/style.css
@@ -20,6 +20,34 @@ body{
 
 }
 
+.github{
+    width: 50px;
+    height: 50px;
+    background-image: url('https://cdn-icons-png.flaticon.com/512/25/25231.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: fixed;
+    right: 50px;
+    top: 50px;
+    border-radius: 50%;
+    z-index: 10;
+    background-color: white;
+}
+
+.twitter{
+    width: 50px;
+    height: 50px;
+    background-image: url('https://cdn-icons-png.flaticon.com/512/1384/1384033.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: fixed;
+    right: 50px;
+    top: 110px;
+    border-radius: 50%;
+    z-index: 10;
+    background-color: #00b0ed;
+}
+
 .titulo{
     font-size: 60px;
 }
